--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "nocache": "^3.0.4",
     "nodemailer": "^6.9.4",
     "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "pg": "^8.11.3",
     "request-promise": "^4.2.6"
