--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "nodemon": "^2.0.22"
   },
   "dependencies": {
+    "@google-cloud/local-auth": "^2.1.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
@@ -22,6 +23,7 @@
     "express-fileupload": "^1.4.0",
     "express-flash": "^0.0.2",
     "express-session": "^1.17.3",
+    "googleapis": "^105.0.0",
     "multer": "^1.4.3",
     "nocache": "^3.0.4",
     "nodemailer": "^6.9.4",
